page/style.css
/* Article Scaffolding */
@layer variant {
    :root {
        --top-nav-height: 3rem;
        --main-height: calc(100vh - var(--top-nav-height));
    }

    .container[data-for="contour-root"] {
        display: flex;
        flex: 1;
        width: 100%;
        position: relative;
        min-height: var(--main-height);
    }

    .menu[data-variant="sidebar"] {
        --menu-nested-margin-inline-start: var(--space-4);

        height: var(--main-height);
        display: flex;
        flex-direction: column;
        flex: 0 0 var(--measure-2);
        border-inline-end: var(--border-width-1) solid var(--border-color);
        overflow-y: auto;
        position: sticky;
        top: var(--top-nav-height);
        padding: var(--space-4);
        background-color: var(--background);
    }

    .menu[data-variant="sidebar"][data-closed] {
        display: none;
    }

    .menu__item[data-variant="sidebar"] {
        border-radius: 5px;
        padding-block: var(--space-3);
        padding-inline: var(--space-5);
    }

    .container[data-variant="main"] {
        display: flex;
        background-color: var(--background);
    }

    .container[data-variant="article"] {
        display: flex;
        width: 100%;
        gap: 2rem;
    }

    .container[data-variant="article-prose"] {
        width: 100%;
        max-width: var(--measure-5);
        margin-inline: auto;
        padding-block: var(--space-6) var(--space-9);
        padding-inline: var(--space-4);
    }

    .container[data-variant="article-prose"] > * + * {
        margin-block-start: var(--space-prose);
    }

    .menu[data-for="article-outline"] {
        position: sticky;
        top: var(--top-nav-height);
        flex: 0 0 var(--measure-2);
        max-height: var(--main-height);
        overflow-y: auto;
    }

    @media (width <= 85rem) {
        .menu[data-for="article-outline"] {
            display: none;
        }
    }

    .menu[data-variant="sidebar"][data-open-overlay] {
        position: fixed;
        z-index: 1;
        width: var(--measure-2);
    }
}

